NXT-656 Add fix for table caption width on mobile

--- a/web/src/components/Storyblok/StoryblokTable/StoryblokTable.module.scss
+++ b/web/src/components/Storyblok/StoryblokTable/StoryblokTable.module.scss
@@ -7,5 +7,8 @@
 
   &__caption {
     text-align: left;
+
+    @include media-queries.mq($until: sm) {
+      display: block;    }
   }
 }
